# poke-shell-bridge

./: README.md  pyproject.toml  requirements.txt
docs/: operations.md
scripts/: bridgectl.py
src/poke_m1_bridge/: bash_exec.py  config.py  pathing.py  server.py
src/poke_shell_bridge/: callback_shell.py  callbacks.py  config.py  files.py  server.py  session_recovery.py  shell.py  trace.py  workspace_profile.py
