[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poke-m1-bridge"
version = "0.1.0"
description = "Local MCP bridge for a dedicated Mac sandbox used by Poke."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
poke-m1-bridge = "poke_m1_bridge.server:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
