[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poke-shell-bridge"
version = "0.1.0"
description = "Local MCP shell bridge for computers used by Poke."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
poke-shell-bridge = "poke_shell_bridge.server:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
